--- a/appadmin/src/pages/userList/userList.css
+++ b/appadmin/src/pages/userList/userList.css
@@ -1,3 +1,32 @@
 .userList{
     flex: 4;
 }
+
+.userList, .userListAction{
+    display: flex;
+    align-items: center;
+}
+
+.userImg{
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.userListEdit{
+    margin-right: 5px;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+
+.userListIcon.Delete{ 
+    font-size: 20px !important;
+    margin-right: 5px;
+    cursor: pointer;
+    color:#555;
+}
+
