--- a/appadmin/src/pages/user/user.css
+++ b/appadmin/src/pages/user/user.css
@@ -100,3 +100,80 @@
 .userShowInputTitle.Mail{
     text-decoration: underline;
 }
+
+.userUpdate{
+
+}
+
+.userUpdateTitle{
+    font-weight: 600;
+    font-size: 25px;
+}
+
+.userUpdateForm{
+    display: flex;
+    margin-top: 10px;
+    justify-content: space-between;
+}
+
+.userUpdateLeft{
+    display: flex;
+   flex-direction: column;
+}
+
+.userUpdateItem{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.userUpdateItem label{
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.userUpdateInput{
+    margin: 5px;
+    width: 200px;
+    height: 20px;
+    border-radius: 9px;
+    padding: 7px;
+    cursor: pointer;
+}
+
+.userUpdateRight{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.userUpdateUpload{
+    display: flex;
+    align-items:flex-end;
+}
+
+.userUpdateImg{
+    width: 200px;
+    height: 200px;
+    border-radius: 10%;
+    object-fit: cover;
+}
+
+.userUpdateIcon{
+    margin-left: 10px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.userUpdateBtn{
+    margin-top: 30px;
+    width: 80px;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    background-color: #ee9b00 ;
+    height: 30px;
+    margin-left: 150px;
+    cursor: pointer;
+}
